# cmakeNetcdfPkgConfig

./: CMakeLists.txt  README.md  foo.cpp
netcdfPkgConfig/: netcdf-cxx4.pc  netcdf.pc
